--- a/tinkar-core/common/pom.xml
+++ b/tinkar-core/common/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>common</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
-    <name>TINKAR: Common</name>
+    <name>TINKAR Common</name>
     
     <dependencies>
         <dependency>
