--- a/tinkar-core/integration/pom.xml
+++ b/tinkar-core/integration/pom.xml
@@ -11,7 +11,7 @@
         <version>1.0.0</version>
     </parent>
 
-    <name>TINKAR: Integration</name>
+    <name>TINKAR Integration</name>
     <version>1.0.0</version>
     <artifactId>integration</artifactId>
 
