--- a/tinkar-core/provider/data-websocket-client-provider/pom.xml
+++ b/tinkar-core/provider/data-websocket-client-provider/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>data-websocket-client-provider</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
-    <name>TINKAR Provider: Data - Websocket client</name>
+    <name>TINKAR Provider Data - Websocket client</name>
 
     <properties>
         <activej.version>4.3</activej.version>
