--- a/tinkar-core/component/pom.xml
+++ b/tinkar-core/component/pom.xml
@@ -15,6 +15,7 @@
     <packaging>jar</packaging>
     <name>TINKAR Component</name>
 
+
     <properties>
         <jacoco.version>0.8.6</jacoco.version>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
@@ -46,6 +47,15 @@
                         <goals>
                             <goal>test-jar</goal>
                         </goals>
+                    </execution>
+                    <execution>
+                        <id>tests</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>tests</classifier>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
