--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -51,7 +51,7 @@
         <maven.clean.plugin.version>3.2.0</maven.clean.plugin.version>
         <maven.resources.plugin.version>3.3.0</maven.resources.plugin.version>
         <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
-        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M9</maven-surefire-plugin.version>
         <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
         <maven.install.plugin.version>3.0.1</maven.install.plugin.version>
         <maven.deploy.plugin.version>3.0.0</maven.deploy.plugin.version>
@@ -227,5 +227,6 @@
         <module>terms</module>
         <module>provider</module>
         <module>integration</module>
+        <module>code-coverage-aggregator</module>
     </modules>
 </project>
