--- a/tinkar-core/pom.xml
+++ b/tinkar-core/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
     
     <artifactId>tinkar</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <parent>
         <groupId>org.hl7.tinkar</groupId>
         <artifactId>tinkar-parent</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <packaging>pom</packaging>
