--- a/tinkar-core/provider/executor-provider/pom.xml
+++ b/tinkar-core/provider/executor-provider/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <artifactId>provider</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>executor-provider</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
     <name>TINKAR Provider Executor provider</name>
 
