--- a/tinkar-core/provider/data-spinedarray-provider/pom.xml
+++ b/tinkar-core/provider/data-spinedarray-provider/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <artifactId>provider</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>data-spinedarray-provider</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>TINKAR Provider Data - Spined array</name>
     
