--- a/tinkar-core/provider/search-provider/pom.xml
+++ b/tinkar-core/provider/search-provider/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <artifactId>provider</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
 
     <artifactId>search-provider</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
     <name>TINKAR Provider Search provider</name>
 
