--- a/tinkar-core/terms/pom.xml
+++ b/tinkar-core/terms/pom.xml
@@ -4,10 +4,10 @@
     <parent>
         <artifactId>tinkar</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
     <artifactId>terms</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
     <packaging>jar</packaging>
     <name>TINKAR Terms</name>
     <dependencies>
