[maven-release-plugin] prepare for next development iteration

--- a/tinkar-core/integration/pom.xml
+++ b/tinkar-core/integration/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <groupId>org.hl7.tinkar</groupId>
         <artifactId>tinkar</artifactId>
-        <version>1.0.2</version>
+        <version>1.0.3-SNAPSHOT</version>
     </parent>
 
     <name>TINKAR Integration</name>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <artifactId>integration</artifactId>
 
     <properties>
