--- a/tinkar-core/provider/data-mvstore-provider/pom.xml
+++ b/tinkar-core/provider/data-mvstore-provider/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <artifactId>provider</artifactId>
         <groupId>org.hl7.tinkar</groupId>
-        <version>1.0.2</version>
+        <version>1.0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>data-mvstore-provider</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>TINKAR Provider Data - MVStore</name>
     
