--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.hl7.tinkar</groupId>
     <artifactId>tinkar-parent</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -36,6 +36,8 @@
         <maven-surefire-report-plugin.version>3.0.0-M9</maven-surefire-report-plugin.version>
         <maven-site-plugin.version>3.7.1</maven-site-plugin.version>
         <maven-jxr-plugin.version>3.3.0</maven-jxr-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <build-helper-maven-plugin.version>3.3.0</build-helper-maven-plugin.version>
         <surefire.jacoco.args />
         <failsafe.jacoco.args />
         <skip.unit.tests />
@@ -286,7 +288,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
-                        <version>2.5.3</version>
+                        <version>${maven-release-plugin.version}</version>
                         <configuration>
                             <tagNameFormat>@{project.version}</tagNameFormat>
                             <checkModificationExcludes>
@@ -297,7 +299,7 @@
                             <dependency>
                                 <groupId>org.codehaus.mojo</groupId>
                                 <artifactId>build-helper-maven-plugin</artifactId>
-                                <version>3.3.0</version>
+                                <version>${build-helper-maven-plugin.version}</version>
                                 <type>maven-plugin</type>
                             </dependency>
                         </dependencies>
