changes for release plugin

--- a/tinkar-core/integration/pom.xml
+++ b/tinkar-core/integration/pom.xml
@@ -76,7 +76,6 @@
                             <excludes>
                                 <exclude>TestEphemeralProtobufLoad.java</exclude>
                             </excludes>
-                            <reuseForks>true</reuseForks>
                         </configuration>
                     </execution>
                 </executions>
@@ -138,7 +137,7 @@
                         <id>before-integration-test-execution</id>
                         <phase>pre-integration-test</phase>
                         <goals>
-                            <goal>prepare-agent</goal>
+                            <goal>prepare-agent-integration</goal>
                         </goals>
                         <configuration>
                             <propertyName>failsafe.jacoco.args</propertyName>
