--- a/pom.xml
+++ b/pom.xml
@@ -272,9 +272,9 @@
         <!-- both unit and Integration tests are combined -->
         <profile>
             <id>testAll</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
+<!--            <activation>-->
+<!--                <activeByDefault>true</activeByDefault>-->
+<!--            </activation>-->
             <properties>
                 <skip.unit.tests>false</skip.unit.tests>
                 <skip.integration.tests>false</skip.integration.tests>
