--- a/pom.xml
+++ b/pom.xml
@@ -250,64 +250,64 @@
         </plugins>
     </reporting>
 
-    <profiles>
-        <!-- profile for unit tests only-->
-        <profile>
-            <id>unit</id>
-            <properties>
-                <skip.unit.tests>false</skip.unit.tests>
-                <skip.integration.tests>true</skip.integration.tests>
-            </properties>
-        </profile>
+<!--    <profiles>-->
+<!--        &lt;!&ndash; profile for unit tests only&ndash;&gt;-->
+<!--        <profile>-->
+<!--            <id>unit</id>-->
+<!--            <properties>-->
+<!--                <skip.unit.tests>false</skip.unit.tests>-->
+<!--                <skip.integration.tests>true</skip.integration.tests>-->
+<!--            </properties>-->
+<!--        </profile>-->
 
-        <!-- profile for Integration tests only-->
-        <profile>
-            <id>it</id>
-            <properties>
-                <skip.unit.tests>true</skip.unit.tests>
-                <skip.integration.tests>false</skip.integration.tests>
-            </properties>
-        </profile>
+<!--        &lt;!&ndash; profile for Integration tests only&ndash;&gt;-->
+<!--        <profile>-->
+<!--            <id>it</id>-->
+<!--            <properties>-->
+<!--                <skip.unit.tests>true</skip.unit.tests>-->
+<!--                <skip.integration.tests>false</skip.integration.tests>-->
+<!--            </properties>-->
+<!--        </profile>-->
 
-        <!-- both unit and Integration tests are combined -->
-        <profile>
-            <id>testAll</id>
-<!--            <activation>-->
-<!--                <activeByDefault>true</activeByDefault>-->
-<!--            </activation>-->
-            <properties>
-                <skip.unit.tests>false</skip.unit.tests>
-                <skip.integration.tests>false</skip.integration.tests>
-            </properties>
-        </profile>
+<!--        &lt;!&ndash; both unit and Integration tests are combined &ndash;&gt;-->
+<!--        <profile>-->
+<!--            <id>testAll</id>-->
+<!--&lt;!&ndash;            <activation>&ndash;&gt;-->
+<!--&lt;!&ndash;                <activeByDefault>true</activeByDefault>&ndash;&gt;-->
+<!--&lt;!&ndash;            </activation>&ndash;&gt;-->
+<!--            <properties>-->
+<!--                <skip.unit.tests>false</skip.unit.tests>-->
+<!--                <skip.integration.tests>false</skip.integration.tests>-->
+<!--            </properties>-->
+<!--        </profile>-->
 
-        <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-release-plugin</artifactId>
-                        <version>${maven-release-plugin.version}</version>
-                        <configuration>
-                            <tagNameFormat>@{project.version}</tagNameFormat>
-                            <checkModificationExcludes>
-                                <checkModificationExclude>pom.xml</checkModificationExclude>
-                            </checkModificationExcludes>
-                        </configuration>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.codehaus.mojo</groupId>
-                                <artifactId>build-helper-maven-plugin</artifactId>
-                                <version>${build-helper-maven-plugin.version}</version>
-                                <type>maven-plugin</type>
-                            </dependency>
-                        </dependencies>
+<!--        <profile>-->
+<!--            <id>release</id>-->
+<!--            <build>-->
+<!--                <plugins>-->
+<!--                    <plugin>-->
+<!--                        <groupId>org.apache.maven.plugins</groupId>-->
+<!--                        <artifactId>maven-release-plugin</artifactId>-->
+<!--                        <version>${maven-release-plugin.version}</version>-->
+<!--                        <configuration>-->
+<!--                            <tagNameFormat>@{project.version}</tagNameFormat>-->
+<!--                            <checkModificationExcludes>-->
+<!--                                <checkModificationExclude>pom.xml</checkModificationExclude>-->
+<!--                            </checkModificationExcludes>-->
+<!--                        </configuration>-->
+<!--                        <dependencies>-->
+<!--                            <dependency>-->
+<!--                                <groupId>org.codehaus.mojo</groupId>-->
+<!--                                <artifactId>build-helper-maven-plugin</artifactId>-->
+<!--                                <version>${build-helper-maven-plugin.version}</version>-->
+<!--                                <type>maven-plugin</type>-->
+<!--                            </dependency>-->
+<!--                        </dependencies>-->
 
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+<!--                    </plugin>-->
+<!--                </plugins>-->
+<!--            </build>-->
+<!--        </profile>-->
+<!--    </profiles>-->
 
 </project>
