--- a/tinkar-core/code-coverage-aggregator/pom.xml
+++ b/tinkar-core/code-coverage-aggregator/pom.xml
@@ -13,6 +13,9 @@
     <properties>
         <sonar.skip>true</sonar.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
+        <sonar.coverage.jacoco.xmlReportPaths>
+            ${project.basedir}/target/site/jacoco-aggregate/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
     </properties>
 
     <dependencies>
